--- a/style.css
+++ b/style.css
@@ -931,6 +931,10 @@ li.nav-item {
   margin-right: 30px;
 }
 
+.text-center {
+  text-align: center
+}
+
 .dash-actions li i {
   display: inline-block;
   margin-right: 6px;
