--- a/style.css
+++ b/style.css
@@ -921,7 +921,6 @@ li.nav-item {
   align-items: center;
   padding: 1.3em 30px 1.3em;
 }
-
 .report-header .filterValues {
   flex: 1;
 }
@@ -1139,8 +1138,29 @@ li.nav-item {
   box-shadow: none !important
 }
 
+.input-group {
+  background: #fff
+}
+
+.iseditingmode{
+  height: 40px;
+}
+
+.iseditingmode input {
+  margin: 5px 10px
+}
+
+.report-element-top {
+  height: 50px;
+}
+
+.report-element-top button.mt-0.btn.btn--block.btn--flat.grey--text.text--darken-2{
+  height: 100%;
+  margin-bottom: 0;
+}
+
 .fhv2 {
-  height: calc(100% - 42px)
+  height: calc(100% - 42px);
 }
 
 .sidebarLinks i {
